--- a/.classpath
+++ b/.classpath
@@ -5,4 +5,4 @@
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java Service Wrapper"/>
 	<classpathentry kind="output" path="target/classes"/>
-</classpath>grtrsd
+</classpath>grtrsds
