--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,5 @@ ss<?xml version="1.0" encoding="UTF-8"?>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java Service Wrapper"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="target/classes"/>qwee
 </classpath>grtrsdsdd
