--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,5 @@ ss<?xml version="1.0" encoding="UTF-8"?>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java Service Wrapper"/>
 	<classpathentry kind="output" path="target/classes"/>qwee
 </classpath>grtrsdsdd
-commiting changines
+commiting changinesqweqwe
 lpkp
